--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_kioku_view">KiokuView</string>
     <string name="title_activity_kioku_view2">KiokuView2</string>
     <string name="title_activity_kioku_map">KiokuMap</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
